[package]
name = "crates-spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
bytes = "1.4"
reqwest = "0.11"
crates-index = "0.19"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

clap = { version = "4.1", features = ["derive"] }

flate2 = "1.0"
tar = "0.4"